Prevents breadcrumbs from wrapping on screens < 375px wide

--- a/frontend/src/app/category/category.component.scss
+++ b/frontend/src/app/category/category.component.scss
@@ -7,6 +7,12 @@ $breadcrumb-inner-border-width: 1px;
   float: left;
   padding: $breadcrumb-padding * 2;
 
+  @media screen and (max-width: 374px) {
+    padding-left: 0px;
+    padding-right: 0px;
+    transform: scale(0.8);
+  }
+
   .breadcrumb {
 
     @media screen and (max-width: 959px) {
